index modif style

--- a/src/index.html
+++ b/src/index.html
@@ -26,8 +26,7 @@
         <!-- Section de bienvenue -->
         <section class="text-center py-12">
             <h1 class="text-3xl sm:text-5xl font-bold text-gray-900">Bienvenue sur NaMaster</h1>
-            <p class="mt-4 text-gray-600 text-lg">Votre plateforme de référence pour la recherche de formations
-                universitaires</p>
+            <p class="mt-4 text-gray-600 text-lg">Namaste, un mot pour vous accueillir et un site pour éclairer votre chemin académique.</p>
             <div class="mt-8 flex justify-center space-x-4">
                 <a href="lesMasters.html"
                     class="bg-blue-600 text-white py-3 px-6 rounded-full hover:bg-blue-700">Explorer les Masters</a>
@@ -88,6 +87,7 @@
             </div>
         </section>
     </main>
+
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
