--- a/src/master.html
+++ b/src/master.html
@@ -31,11 +31,10 @@
 
         <!-- Carte de l'établissement -->
         <div class="bg-white rounded-lg shadow-md p-4">
-            <div>
-                <h2 class="text-lg font-semibold">IUT de Xxxxxxxx</h2>
-                <p class="text-sm text-gray-600">Lorem ipsum dolor sit amet consectetur. Fermentum leo eget ipsum in dui
-                    ultrices morbi id.</p>
+            <div id="master-info" class="p-4">
+                <!-- Les informations dynamiques sur le master seront insérées ici -->
             </div>
+
             <!-- Grille pour aligner les graphiques -->
             <div id="container-echart" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 mt-4">
                 <div id="chart-candidatures" style="width: 100%; height: 400px;"></div>
@@ -47,61 +46,16 @@
 
         <!-- Titre des masters -->
         <div>
-            <h3 class="text-center text-xl font-bold">MASTERS DISPONIBLES DANS<br>CET ÉTABLISSEMENT</h3>
+            <h3 id="dynamic-title" class="text-center text-xl font-bold"></h3>
+
             <hr class="my-4 border-t border-gray-300">
         </div>
 
-        <!-- Liste des masters -->
-        <div class="grid grid-cols-1 gap-4 md:grid-cols-2 lg:grid-cols-4">
-            <div class="bg-white rounded-lg shadow-md p-4">
-                <h4 class="text-lg font-semibold">MASTER Xxxxxxxx</h4>
-                <p class="text-sm text-gray-600">Description master. Lorem ipsum dolor sit amet consectetur. Est nunc
-                    elit molestie vel viverra phasellus rutrum urna vulputate. Orci aliquet lectus ut tristique lacus.
-                </p>
-            </div>
-            <div class="bg-white rounded-lg shadow-md p-4">
-                <h4 class="text-lg font-semibold">MASTER Xxxxxxxx</h4>
-                <p class="text-sm text-gray-600">Description master. Lorem ipsum dolor sit amet consectetur. Est nunc
-                    elit molestie vel viverra phasellus rutrum urna vulputate. Orci aliquet lectus ut tristique lacus.
-                </p>
-            </div>
-            <div class="bg-white rounded-lg shadow-md p-4">
-                <h4 class="text-lg font-semibold">MASTER Xxxxxxxx</h4>
-                <p class="text-sm text-gray-600">Description master. Lorem ipsum dolor sit amet consectetur. Est nunc
-                    elit molestie vel viverra phasellus rutrum urna vulputate. Orci aliquet lectus ut tristique lacus.
-                </p>
-            </div>
-            <div class="bg-white rounded-lg shadow-md p-4">
-                <h4 class="text-lg font-semibold">MASTER Xxxxxxxx</h4>
-                <p class="text-sm text-gray-600">Description master. Lorem ipsum dolor sit amet consectetur. Est nunc
-                    elit molestie vel viverra phasellus rutrum urna vulputate. Orci aliquet lectus ut tristique lacus.
-                </p>
-            </div>
-            <div class="bg-white rounded-lg shadow-md p-4">
-                <h4 class="text-lg font-semibold">MASTER Xxxxxxxx</h4>
-                <p class="text-sm text-gray-600">Description master. Lorem ipsum dolor sit amet consectetur. Est nunc
-                    elit molestie vel viverra phasellus rutrum urna vulputate. Orci aliquet lectus ut tristique lacus.
-                </p>
-            </div>
-            <div class="bg-white rounded-lg shadow-md p-4">
-                <h4 class="text-lg font-semibold">MASTER Xxxxxxxx</h4>
-                <p class="text-sm text-gray-600">Description master. Lorem ipsum dolor sit amet consectetur. Est nunc
-                    elit molestie vel viverra phasellus rutrum urna vulputate. Orci aliquet lectus ut tristique lacus.
-                </p>
-            </div>
-            <div class="bg-white rounded-lg shadow-md p-4">
-                <h4 class="text-lg font-semibold">MASTER Xxxxxxxx</h4>
-                <p class="text-sm text-gray-600">Description master. Lorem ipsum dolor sit amet consectetur. Est nunc
-                    elit molestie vel viverra phasellus rutrum urna vulputate. Orci aliquet lectus ut tristique lacus.
-                </p>
-            </div>
-            <div class="bg-white rounded-lg shadow-md p-4">
-                <h4 class="text-lg font-semibold">MASTER Xxxxxxxx</h4>
-                <p class="text-sm text-gray-600">Description master. Lorem ipsum dolor sit amet consectetur. Est nunc
-                    elit molestie vel viverra phasellus rutrum urna vulputate. Orci aliquet lectus ut tristique lacus.
-                </p>
-            </div>
+        <!-- Liste des autres masters -->
+        <div id="other-masters" class="grid grid-cols-1 gap-4 md:grid-cols-2 lg:grid-cols-4">
+            <!-- Les autres masters seront insérés ici dynamiquement -->
         </div>
+
     </main>
 
     <script>
@@ -134,6 +88,129 @@
                 document.getElementById('search-container').innerHTML = data;
             })
             .catch(error => console.error('Error loading header:', error));
+
+        document.addEventListener('DOMContentLoaded', async () => {
+            const apiURL = 'https://la-lab4ce.univ-lemans.fr/masters-stats/api/rest/formations';
+            const masterInfoContainer = document.getElementById('master-info');
+
+            // Fonction pour récupérer les paramètres de l'URL
+            function getQueryParam(param) {
+                const urlParams = new URLSearchParams(window.location.search);
+                return urlParams.get(param);
+            }
+
+            // Récupérer l'ID du master depuis l'URL
+            const masterId = getQueryParam('id');
+            if (!masterId) {
+                masterInfoContainer.innerHTML = `<p class="text-red-500">Erreur : aucun master spécifié.</p>`;
+                return;
+            }
+
+            try {
+                // Appel à l'API pour récupérer les détails du master
+                const response = await fetch(`${apiURL}?full-details=1`);
+                if (!response.ok) throw new Error('Erreur lors du chargement des données.');
+
+                const data = await response.json();
+                const master = data.find(m => m.ifc === masterId);
+
+                if (!master) {
+                    masterInfoContainer.innerHTML = `<p class="text-red-500">Erreur : le master spécifié est introuvable.</p>`;
+                    return;
+                }
+
+                // Insérer les données dynamiques
+                masterInfoContainer.innerHTML = `
+            <h1 class="text-2xl font-bold">${master.parcours || 'Nom non disponible'}</h1>
+            <p class="text-sm text-gray-600">Mention : ${master.mention || 'Non spécifié'}</p>
+            <p class="text-sm text-gray-600">Discipline : ${master.discipline || 'Non spécifiée'}</p>
+            <p class="text-sm text-gray-600">Secteur disciplinaire : ${master.secteur_disciplinaire || 'Non spécifié'}</p>
+            <p class="text-sm text-gray-600">Alternance : ${master.alternance ? 'Oui' : 'Non'}</p>
+            <p class="text-sm text-gray-600">Lieu : ${master.lieux || 'Non spécifié'}</p>
+            <hr class="my-4 border-t border-gray-300">
+            <h2 class="text-2xl font-bold text-center">Statistiques</h2>
+        `;
+            } catch (error) {
+                console.error('Erreur lors du chargement des données :', error);
+                masterInfoContainer.innerHTML = `<p class="text-red-500">Impossible de charger les informations. Veuillez réessayer plus tard.</p>`;
+            }
+        });
+
+
+        document.addEventListener('DOMContentLoaded', async () => {
+    const apiURL = 'https://la-lab4ce.univ-lemans.fr/masters-stats/api/rest/formations';
+    const otherMastersContainer = document.getElementById('other-masters');
+    const dynamicTitle = document.getElementById('dynamic-title');
+
+    // Fonction pour récupérer les paramètres de l'URL
+    function getQueryParam(param) {
+        const urlParams = new URLSearchParams(window.location.search);
+        return urlParams.get(param);
+    }
+
+    // Récupérer l'ID du master depuis l'URL
+    const masterId = getQueryParam('id');
+    if (!masterId) {
+        dynamicTitle.textContent = 'Erreur : aucun master spécifié';
+        otherMastersContainer.innerHTML = `<p class="text-red-500">Erreur : aucun master spécifié.</p>`;
+        return;
+    }
+
+    try {
+        // Appel à l'API pour récupérer tous les masters
+        const response = await fetch(`${apiURL}?full-details=1`);
+        if (!response.ok) throw new Error('Erreur lors du chargement des données.');
+
+        const masters = await response.json();
+        const currentMaster = masters.find(m => m.ifc === masterId);
+
+        if (!currentMaster) {
+            dynamicTitle.textContent = 'Erreur : master introuvable';
+            otherMastersContainer.innerHTML = `<p class="text-red-500">Erreur : le master spécifié est introuvable.</p>`;
+            return;
+        }
+
+        // Extraire le nom de l'établissement
+        const { etablissement } = currentMaster;
+        dynamicTitle.textContent = `Autres Masters disponibles dans ${etablissement || 'cet établissement'}`;
+
+        // Extraire latitude, longitude et lieux du master courant
+        const { latitude, longitude, lieux } = currentMaster;
+
+        if (!latitude || !longitude || !lieux) {
+            otherMastersContainer.innerHTML = `<p class="text-gray-500 text-center">Aucune information géographique disponible pour ce master.</p>`;
+            return;
+        }
+
+        // Filtrer les masters ayant les mêmes coordonnées ET le même champ 'lieux', en excluant le master courant
+        const otherMasters = masters.filter(
+            m =>
+                m.latitude === latitude &&
+                m.longitude === longitude &&
+                m.lieux === lieux &&
+                m.ifc !== masterId // Exclure le master actuel
+        );
+
+        // Insérer dynamiquement les autres masters
+        if (otherMasters.length === 0) {
+            otherMastersContainer.innerHTML = `<p class="text-gray-500 text-center">Aucun autre master disponible au même endroit.</p>`;
+        } else {
+            otherMastersContainer.innerHTML = otherMasters.map(master => `
+                <div class="bg-white rounded-lg shadow-md p-4">
+                    <h4 class="text-lg font-semibold">${master.parcours || 'Nom non disponible'}</h4>
+                    <p class="text-sm text-gray-600">Mention : ${master.mention || 'Non spécifiée'}</p>
+                    <p class="text-sm text-gray-600">Lieu : ${master.lieux || 'Non spécifié'}</p>
+                    <p class="text-sm text-gray-600">Alternance : ${master.alternance ? 'Oui' : 'Non'}</p>
+                    <a href="master.html?id=${master.ifc}" class="text-blue-500 hover:underline">Voir plus</a>
+                </div>
+            `).join('');
+        }
+    } catch (error) {
+        console.error('Erreur lors du chargement des données :', error);
+        dynamicTitle.textContent = 'Erreur : données indisponibles';
+        otherMastersContainer.innerHTML = `<p class="text-red-500">Impossible de charger les autres masters. Veuillez réessayer plus tard.</p>`;
+    }
+});
 
     </script>
     <footer>
