--- a/src/etablissement.html
+++ b/src/etablissement.html
@@ -32,11 +32,11 @@
             <p id="establishment-academie" class="text-lg text-gray-600"></p>
         </div>
 
-        <div>
+        <!-- <div>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!2m3!3v2!1xyz..." width="600" height="450"
                 style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
             </iframe>
-        </div>
+        </div> -->
 
         <div>
             <h2 class="font-bold text-3xl mb-4">Masters disponibles</h2>
@@ -49,16 +49,15 @@
                 <p id="loader-text" class="mt-4 text-gray-600 text-lg font-semibold"></p>
             </div>
         </div>
+
+        <div class="text-center mt-10">
+            <button class="px-6 py-3 bg-blue-500 text-white font-semibold rounded-lg hover:bg-blue-600 focus:ring-4 focus:ring-blue-300">
+                Explorez nos Masters
+            </button>
+        </div>
     </main>
 
     <script>
-
-        // Fonction pour récupérer les paramètres de l'URL
-        function getQueryParam(param) {
-            const urlParams = new URLSearchParams(window.location.search);
-            return urlParams.get(param);
-        }
-
         fetch('header.html')
             .then(response => response.text())
             .then(data => {
@@ -91,175 +90,92 @@
 
 
 
-        // Fonction principale pour gérer la page établissement
-        document.addEventListener('DOMContentLoaded', () => {
-            const mastersContainer = document.getElementById('masters-container');
-            const establishmentName = document.getElementById('establishment-name');
-            const establishmentAcademie = document.getElementById('establishment-academie');
-            const apiEtablissementsURL = 'https://la-lab4ce.univ-lemans.fr/masters-stats/api/rest/etablissements';
-            const apiFormationsURL = 'https://la-lab4ce.univ-lemans.fr/masters-stats/api/rest/formations';
-
-            // Récupère l'ID de l'établissement dans l'URL
-            const establishmentId = getQueryParam('id');
-
-            if (!establishmentId) {
-                console.error("Aucun ID d'établissement spécifié.");
-                mastersContainer.innerHTML = '<p class="text-red-500 text-center">Aucun établissement trouvé.</p>';
-                return;
-            }
-
-            // Charge les données de l'établissement et des formations
-            fetchEstablishmentData(establishmentId)
-                .then(establishment => {
-                    // Mettre à jour le titre de l'établissement
-                    establishmentName.textContent = establishment.nom || 'Nom non disponible';
-                    establishmentAcademie.textContent = `Académie ID : ${establishment.academieId || 'Non spécifié'}`;
-
-                    // Charger et afficher les formations liées
-                    fetchMastersForEstablishment(establishmentId);
-                })
-                .catch(error => {
-                    console.error("Erreur :", error);
-                    mastersContainer.innerHTML = '<p class="text-red-500 text-center">Impossible de charger les données. Veuillez réessayer plus tard.</p>';
-                });
-        });
-
-
-
-        // Textes dynamiques pour le loader
-        let loaderTexts = [
-            "Détendez-vous, nous chargeons les données",
-            "Namasté, nous chargeons la page",
-            "Aucune idée de master, NaMaster est là."
-        ];
-
-        let loaderInterval;
-
-        const showLoader = () => {
-            const loader = document.getElementById('loader');
-            const loaderText = document.getElementById('loader-text');
-            let index = 0;
-
-            loader.classList.remove('hidden'); // Affiche le loader
-            loaderText.textContent = loaderTexts[index];
-
-            loaderInterval = setInterval(() => {
-                index = (index + 1) % loaderTexts.length;
-                loaderText.textContent = loaderTexts[index];
-            }, 3000);
-        };
-
-        const hideLoader = () => {
-            const loader = document.getElementById('loader');
-            loader.classList.add('hidden'); // Cache le loader
-            clearInterval(loaderInterval); // Arrête l'intervalle
-        };
-
-
-
-
-
-        // Fonction pour récupérer les paramètres de l'URL
-        function getQueryParam(param) {
+      // Fonction pour récupérer un paramètre de l'URL
+      function getQueryParam(param) {
             const urlParams = new URLSearchParams(window.location.search);
             return urlParams.get(param);
         }
 
-        // Fonction pour récupérer les données de l'établissement
-        function fetchEstablishmentData(establishmentId) {
-            return fetch('https://la-lab4ce.univ-lemans.fr/masters-stats/api/rest/etablissements')
-                .then(response => {
-                    if (!response.ok) {
-                        throw new Error('Erreur lors du chargement des établissements.');
-                    }
-                    return response.json();
-                })
-                .then(data => {
-                    const establishment = data.find(etab => etab.uai === establishmentId);
-                    if (!establishment) {
-                        throw new Error('Établissement introuvable.');
-                    }
-                    return establishment;
-                });
+        // Récupère les données de l'établissement
+        async function fetchEstablishmentData(establishmentId) {
+            const response = await fetch('https://la-lab4ce.univ-lemans.fr/masters-stats/api/rest/etablissements');
+            if (!response.ok) {
+                throw new Error('Erreur lors du chargement des établissements.');
+            }
+            const data = await response.json();
+            return data.find(etab => etab.uai === establishmentId);
         }
 
-        /// Fonction pour récupérer et afficher les formations liées à un établissement
-        const fetchMastersForEstablishment = (establishmentId) => {
-            console.log("Establishment ID récupéré :", establishmentId); // Vérification de l'ID
+        // Récupère les masters liés à un établissement
+        async function fetchMastersForEstablishment(establishmentId) {
+            const response = await fetch('https://la-lab4ce.univ-lemans.fr/masters-stats/api/rest/formations');
+            if (!response.ok) {
+                throw new Error('Erreur lors du chargement des formations.');
+            }
+            const data = await response.json();
+            return data.filter(master => master.etabUai === establishmentId && master.parcours !== "");
+        }
+
+        // Affiche les masters dans le conteneur
+        function displayMasters(masters, mastersContainer) {
+            mastersContainer.innerHTML = '';
+
+            if (masters.length === 0) {
+                mastersContainer.innerHTML = '<p class="text-gray-500 text-center">Aucune formation trouvée pour cet établissement.</p>';
+                return;
+            }
+
+            masters.forEach(master => {
+                const masterCard = document.createElement('div');
+                masterCard.className = 'p-4 bg-white border rounded-md shadow-sm';
+                masterCard.innerHTML = `
+                    <h2 class="font-bold text-lg mb-2 lg:text-2xl">${master.parcours || 'Nom non disponible'}</h2>
+                    <p class="text-sm text-gray-500 lg:text-lg">Lieu(x) : ${master.lieux || 'Non spécifié'}</p>
+                    <p class="text-sm text-gray-500 lg:text-lg">Alternance : ${master.alternance ? 'Oui' : 'Non'}</p>
+                    <div class="mt-4 text-center">
+                        <button class="px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600 focus:ring-2 focus:ring-blue-300" onclick="redirectToMaster('${master.ifc}')">
+                            Voir le Master
+                        </button>
+                    </div>
+                `;
+                mastersContainer.appendChild(masterCard);
+            });
+        }
+
+        // Fonction pour rediriger vers la page du master
+        function redirectToMaster(masterId) {
+            window.location.href = `master.html?id=${masterId}`;
+        }
+
+        document.addEventListener('DOMContentLoaded', async () => {
+            const establishmentId = getQueryParam('id');
+            const establishmentNameElement = document.getElementById('establishment-name');
+            const establishmentAcademieElement = document.getElementById('establishment-academie');
             const mastersContainer = document.getElementById('masters-container');
 
-            showLoader(); // Afficher le loader pendant le chargement
+            if (!establishmentId) {
+                mastersContainer.innerHTML = '<p class="text-red-500 text-center">Aucun établissement spécifié.</p>';
+                return;
+            }
 
-            fetch('https://la-lab4ce.univ-lemans.fr/masters-stats/api/rest/formations')
-                .then(response => {
-                    if (!response.ok) {
-                        throw new Error('Erreur lors du chargement des formations.');
-                    }
-                    return response.json();
-                })
-                .then(formations => {
-                    // Filtrer les masters pour l'établissement sélectionné
-                    const filteredMasters = formations.filter(master =>
-                        master.etabUai === establishmentId && master.parcours !== ""
-                    );
-
-                    // Nettoyer le conteneur des masters
-                    mastersContainer.innerHTML = '';
-
-                    // Vérifier si des masters existent
-                    if (filteredMasters.length === 0) {
-                        mastersContainer.innerHTML = '<p class="text-gray-500 text-center">Aucune formation trouvée pour cet établissement.</p>';
-                    } else {
-                        filteredMasters.forEach(master => {
-                            const masterCard = createMasterCard(master);
-                            mastersContainer.appendChild(masterCard);
-                        });
-                    }
-                })
-                .catch(error => {
-                    console.error("Erreur lors du chargement des formations :", error);
-                    mastersContainer.innerHTML = '<p class="text-red-500 text-center">Impossible de charger les formations. Veuillez réessayer plus tard.</p>';
-                })
-                .finally(() => {
-                    hideLoader(); // Cacher le loader après le chargement, même en cas d'erreur
-                });
-        };
-
-
-        // Fonction pour créer une carte de master
-        function createMasterCard(master) {
-            const masterCard = document.createElement('div');
-            masterCard.className = 'p-4 bg-white border rounded-md shadow-sm';
-            masterCard.innerHTML = `
-        <h2 class="font-bold text-lg mb-2 lg:text-2xl">${master.parcours || 'Nom non disponible'}</h2>
-        <p class="text-sm text-gray-500 lg:text-lg">Lieu(x) : ${master.lieux || 'Non spécifié'}</p>
-        <p class="text-sm text-gray-500 lg:text-lg">Alternance : ${master.alternance ? 'Oui' : 'Non'}</p>
-    `;
-            return masterCard;
-        }
-        ;
-
-        document.addEventListener('DOMContentLoaded', () => {
-            const backToTopButton = document.getElementById('back-to-top');
-
-            // Afficher la flèche lorsque l'utilisateur descend dans la page
-            window.addEventListener('scroll', () => {
-                if (window.scrollY > 300) { // Affiche la flèche après 300px de défilement
-                    backToTopButton.classList.remove('hidden');
-                } else {
-                    backToTopButton.classList.add('hidden');
+            try {
+                // Charge les données de l'établissement
+                const establishment = await fetchEstablishmentData(establishmentId);
+                if (!establishment) {
+                    throw new Error('Établissement introuvable.');
                 }
-            });
 
-            // Fonctionnalité de retour en haut de la page
-            backToTopButton.addEventListener('click', () => {
-                window.scrollTo({
-                    top: 0,
-                    behavior: 'smooth' // Défilement fluide
-                });
-            });
+                establishmentNameElement.textContent = establishment.nom;
+                establishmentAcademieElement.textContent = `Académie ID : ${establishment.academieId || 'Non spécifié'}`;
+
+                // Charge et affiche les masters
+                const masters = await fetchMastersForEstablishment(establishmentId);
+                displayMasters(masters, mastersContainer);
+            } catch (error) {
+                console.error(error);
+                mastersContainer.innerHTML = '<p class="text-red-500 text-center">Une erreur est survenue. Veuillez réessayer plus tard.</p>';
+            }
         });
-
     </script>
     <footer>
         <div id="footer-container"></div>
