Recherche via API REST + link du fichier js dans les pages necessaires

--- a/src/master.html
+++ b/src/master.html
@@ -12,6 +12,7 @@
     <!-- fichiers js -->
     <script src="./js/bgMenu.js"></script>
     <script src="./js/navBarre.js"></script>
+    <script src="./js/search.js"></script>
 
     <!-- Swiper JS -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
