--- a/src/lesMastersFiltresExemple.html
+++ b/src/lesMastersFiltresExemple.html
@@ -7,6 +7,7 @@
   <script src="https://cdn.tailwindcss.com/"></script>
   <script src="./js/bgMenu.js"></script>
   <script src="./js/navBarre.js"></script>
+  <script src="./js/search.js"></script>
 </head>
 <body class="pt-20 bg-gray-100 text-gray-800">
   <header>
