--- a/src/rechercheETfiltres.html
+++ b/src/rechercheETfiltres.html
@@ -11,6 +11,7 @@
   <!-- Swiper JS -->
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
   <script src="./js/filtresRecherche.js"></script>
+  <script src="./js/search.js"></script>
 </head>
 
 <body>
