--- a/src/master.html
+++ b/src/master.html
@@ -14,6 +14,9 @@
     <script src="./js/navBarre.js"></script>
     <script src="./js/search.js"></script>
 
+    <script src="./js/mastersSearch.js"></script>
+
+
     <!-- Swiper JS -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="./js/filtresRecherche.js"></script>
