--- a/src/lesEtablissements.html
+++ b/src/lesEtablissements.html
@@ -32,6 +32,15 @@
       </h1>
     </div>
 
+    <!-- Superposition pour le loader -->
+  <div id="global-loader" class="fixed inset-0 bg-gray-900 bg-opacity-50 z-50 flex items-center justify-center hidden">
+    <div class="text-center">
+      <div class="animate-spin rounded-full h-16 w-16 border-t-4 border-blue-500"></div>
+      <p class="mt-4 text-white text-lg font-semibold">Chargement en cours...</p>
+    </div>
+  </div>
+
+
     <div id="academies-container" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 sm:mx-8 lg:mx-10 mb-8">
       <!-- Les académies seront insérées ici -->
     </div>
@@ -43,6 +52,9 @@
   </main>
 
   <script>
+
+
+
     // Charger et insérer le contenu de header.html
     fetch('header.html')
       .then(response => response.text())
@@ -185,6 +197,53 @@
       });
     });
 
+ // Fonction pour afficher le loader global
+ const showLoader = () => {
+      const loader = document.getElementById('global-loader');
+      loader.classList.remove('hidden');
+    };
+
+    // Fonction pour masquer le loader global
+    const hideLoader = () => {
+      const loader = document.getElementById('global-loader');
+      loader.classList.add('hidden');
+    };
+
+    document.addEventListener('DOMContentLoaded', async () => {
+      const academiesContainer = document.getElementById('academies-container');
+      const etablissementsContainer = document.getElementById('etablissements-container');
+
+      // Afficher le loader
+      showLoader();
+
+      try {
+        // Simuler une récupération des académies
+        const response = await fetch('https://la-lab4ce.univ-lemans.fr/masters-stats/api/rest/academies');
+        const data = await response.json();
+
+        // Masquer le loader
+        hideLoader();
+
+        // Afficher les académies
+        data.forEach(academie => {
+          const card = document.createElement('div');
+          card.className = 'p-4 bg-white border rounded-md shadow-sm cursor-pointer';
+          card.innerHTML = `
+            <h2 class="font-bold text-lg mb-2 lg:text-2xl">${academie.nom}</h2>
+            <p class="text-sm text-gray-500">ID : ${academie.id}</p>
+          `;
+          card.addEventListener('click', () => {
+            alert(`Clique sur l'académie : ${academie.nom}`);
+            // Charger les établissements liés à cette académie
+          });
+          academiesContainer.appendChild(card);
+        });
+      } catch (error) {
+        hideLoader();
+        academiesContainer.innerHTML = '<p class="text-red-500 text-center">Erreur de chargement des académies.</p>';
+        console.error(error);
+      }
+    });
   </script>
   <footer>
     <div id="footer-container"></div>
